objects/MetaraceTemplate__mdt/MetaraceTemplate__mdt.object-meta.xml
<CustomObject>
    <label>MetaraceTemplate</label>
    <pluralLabel>MetaraceTemplates</pluralLabel>
</CustomObject>