objects/MetaraceTemplate__mdt/fields/Build_Point_Cost__c.field-meta.xml
<CustomField>
    <fullName>Build_Point_Cost__c</fullName>
    <label>Build Point Cost</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>