objects/MetaraceTemplate__mdt/fields/Commentary__c.field-meta.xml
<CustomField>
    <fullName>Commentary__c</fullName>
    <label>Commentary</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>