objects/MetaraceTemplate__mdt/fields/Habitat__c.field-meta.xml
<CustomField>
    <fullName>Habitat__c</fullName>
    <label>Habitat</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>