objects/MetaraceTemplate__mdt/fields/Habits__c.field-meta.xml
<CustomField>
    <fullName>Habits__c</fullName>
    <label>Habits</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>