objects/MetaraceTemplate__mdt/fields/Identification__c.field-meta.xml
<CustomField>
    <fullName>Identification__c</fullName>
    <label>Identification</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>