objects/MetaraceTemplate__mdt/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <label>Image</label>
    <length>30</length>
    <type>Text</type>
</CustomField>