objects/MetaraceTemplate__mdt/fields/RunningMultiplier__c.field-meta.xml
<CustomField>
    <fullName>RunningMultiplier__c</fullName>
    <label>RunningMultiplier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>