objects/MetaraceTemplate__mdt/fields/Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy__c</fullName>
    <label>Taxonomy</label>
    <length>30</length>
    <type>Text</type>
</CustomField>