objects/MetaraceTemplate__mdt/fields/Young__c.field-meta.xml
<CustomField>
    <fullName>Young__c</fullName>
    <label>Young</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>